--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,14 @@
-/* 樣式表示例 */
-
-/* 頁面整體樣式 */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-/* 標題樣式 */
-h1 {
-    color: #333;
-    text-align: center;
-}
-
-/* 導航樣式 */
-nav {
-    background-color: #f2f2f2;
-    padding: 10px;
-}
-
-nav ul {
-    list-style-type: none;
+.center {
     margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #333;
-}
-
-/* 主要區塊樣式 */
-main {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 20px;
-}
-
-/* 頁尾樣式 */
-footer {
-    background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
